wip: separate jetty from common code.
todo:
* stop build-health saying wiremock-jetty and wiremock-common
dependencies should be testImplementation.